--- a/webroot/web/modules/custom/team_manager/team_manager.libaries.yml
+++ b/webroot/web/modules/custom/team_manager/team_manager.libaries.yml
@@ -1,7 +1,9 @@
 drag_and_drop:
   version: 1.x
   js:
-    src/js/team_manager_drag_and_drop.js: {}
+    /themes/custom/atlantiq/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js: { }
+    js/Sortable.min.js: { }
+    js/team_manager_drag_and_drop.js: { }
   dependencies:
     - core/jquery
     - core/drupal
