--- a/webroot/web/modules/custom/team_manager/team_manager.info.yml
+++ b/webroot/web/modules/custom/team_manager/team_manager.info.yml
@@ -1,7 +1,7 @@
 name: 'Team Manager'
 type: module
 description: 'Mit diesem Modul können Personen mittels Drag und Drop verschoben werden.'
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^10
 package: Custom
 dependencies:
   - drupal:node
